<resources>
    <string name="app_name">ShelfTalk</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="logout">Logout</string>
    <string name="add_review">Add Review</string>
    <string name="view_reviews">View Reviews</string>
    <string name="add_summary">Add Summary</string>
    <string name="view_summaries">View Summaries</string>
    <string name="book_title">Book Title</string>
    <string name="author">Author</string>
    <string name="rating">Rating</string>
    <string name="review_text">Review Text</string>
    <string name="summary_text">Summary</string>
    <string name="loved_part">Most Loved Part</string>
    <string name="save">Save</string>
    <string name="welcome">Welcome to ShelfTalk</string>
</resources>